--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,14 @@ jobs:
   test:
     # Test on Ubuntu latest release, CPython 3.6-3.9
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version: ['3.6', '3.7', '3.8', '3.9']
+
+    # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
+    continue-on-error: true
 
     steps:
     # Checkout sources
@@ -93,9 +98,9 @@ jobs:
       run: |
         python -m twisted.trial crossbar
 
-    - name: Run integration tests (Autobahn Client)
-      run: |
-        ./test/test_ab_examples.sh
+    # - name: Run integration tests (Autobahn Client)
+    #   run: |
+    #     ./test/test_ab_examples.sh
 
     - name: Run command line tests (Crossbar.io CLI)
       run: |
