--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,12 +52,14 @@ jobs:
     env:
       CB_FULLTESTS: 1
 
-    # Test on Ubuntu latest release, CPython 3.6-3.9 and PyPy 3.6-3.7
-    runs-on: ubuntu-latest
+    # Test on Ubuntu, MacOS, Windows using CPython 3.6-3.9 and PyPy 3.6-3.7
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy3.6', 'pypy3.7']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        # https://github.com/actions/setup-python#specifying-a-pypy-version
+        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -79,6 +81,7 @@ jobs:
         sudo apt install libunwind-dev
 
     # Use this Python
+    # https://github.com/actions/setup-python/blob/main/README.md
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
