--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@
 #   * https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 #   * https://github.com/actions/starter-workflows/blob/main/ci/python-package.yml
 #
-name: Crossbar.io
+name: main
 
 on:
   push:
@@ -59,12 +59,14 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         # os: [ubuntu-latest, macos-latest, windows-latest]
+
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+        python-version: ['3.6', '3.7', '3.8', '3.9']
+        # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
-    continue-on-error: true
+    continue-on-error: false
 
     steps:
     # Checkout sources
