--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,146 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Crossbar.io
+# GitHub actions for Crossbar.io CI/CD
+#
+# See also:
+#
+#   * https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+#   * https://github.com/actions/starter-workflows/blob/main/ci/python-package.yml
+#
+name: main
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - master
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - master
 
 jobs:
-  build:
-
+  check:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9']
-
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install libenchant-dev
+        sudo apt install libbz2-dev
+        sudo apt install libsnappy-dev
+        sudo apt install libunwind-dev
+
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        architecture: 'x64'
+
+    - name: Install Python package dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Run Flake8
+      run: tox -c tox.ini -e flake8
+
+    - name: Run Bandit
+      run: tox -c tox.ini -e bandit
+
+    - name: Run Coverage
+      run: tox -c tox.ini -e coverage
+
+  test:
+    env:
+      CB_FULLTESTS: 1
+
+    # Test on Ubuntu, MacOS, Windows using CPython 3.6-3.9, PyPy 3.6-3.7
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+
+        # https://github.com/actions/setup-python#specifying-a-pypy-version
+        python-version: ['3.6', '3.7', '3.8', '3.9']
+        # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+
+    # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
+    continue-on-error: false
+
+    steps:
+    # Checkout sources
+    - uses: actions/checkout@v2
+
+    # Install OS packages, as we install Python packages from source:
+    # libenchant-dev: needed for pyenchant, needed for sphinx-spellcheck
+    # libbz2-dev, libsnappy-dev: needed for compression
+    # libunwind-dev: needed for vmprof
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install build-essential libssl-dev libffi-dev libunwind-dev \
+          libreadline-dev zlib1g-dev libbz2-dev libsqlite3-dev libncurses5-dev \
+          libsnappy-dev
+
+    # Use this Python
+    # https://github.com/actions/setup-python/blob/main/README.md
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+
+    - name: Install Python package dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
-        pip install -r requirements.txt
+
+    - name: Install Crossbar.io package dependencies & Crossbar.io
+      run: |
+        pip install -r requirements-latest.txt
+        pip install .
+
+    - name: Display Crossbar.io version
+      run: |
+        python -c "from twisted.conch.checkers import SSHPublicKeyDatabase"
+        python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
+        python -c "import crossbar; print(crossbar.__version__)"
+
     - name: Run unit tests (Twisted Trial)
       run: |
         python -m twisted.trial crossbar
-    - name: Run integration tests (Autobahn Client)
-      run: |
-        ./test/test_ab_examples.sh
+
+    # - name: Run integration tests (Autobahn Client)
+    #   run: |
+    #     ./test/test_ab_examples.sh
+
     - name: Run command line tests (Crossbar.io CLI)
       run: |
         ./test/test_cli.sh
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install libenchant-dev
+        sudo apt install libbz2-dev
+        sudo apt install libsnappy-dev
+        sudo apt install libunwind-dev
+
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        architecture: 'x64'
+
+    - name: Install Python package dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Run Sphinx
+      run: tox -c tox.ini -e sphinx
