--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,30 @@
 [tox]
+skip_missing_interpreters = true
 envlist =
     sphinx
     flake8
     bandit
     coverage
-    {py38,pypy3}-{pinned,unpinned,abtrunk}-trial
-    {py38,pypy3}-cli
-    {py38,pypy3}-examples
+    {py36,py37,py38,py39,pypy36,pypy37}-{pinned,unpinned,abtrunk}-trial
+    {py36,py37,py38,py39,pypy36,pypy37}-cli
+    {py36,py37,py38,py39,pypy36,pypy37}-examples
+
+
+# MAP: GitHub Actions Python Name => Tox Env Name (for Python)
+#
+# when called without a specific environment ("-e"), detect the
+# python version / get from GH action, and map to tox env
+#
+# https://github.com/ymyzk/tox-gh-actions
+#
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    pypy-3.6: pypy36
+    pypy-3.7: pypy37
 
 
 [testenv]
@@ -46,7 +64,7 @@ commands =
     # in envs with "trial", run Twisted trial
     trial: python -m twisted.trial crossbar
 setenv =
-    {py38,pypy3}: CB_FULLTESTS = 1
+    {py39,pypy37}: CB_FULLTESTS = 1
 
 
 
@@ -133,4 +151,4 @@ commands =
 setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     COVERAGE_FILE = {toxinidir}/.coverage
-    {py38,pypy3}: CB_FULLTESTS = 1
+    {py39,pypy37}: CB_FULLTESTS = 1
