--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
 
@@ -57,12 +57,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-20.04]
+        # os: [ubuntu-20.04, macos-latest, windows-latest]
 
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.6', '3.7', '3.8', '3.9']
-        # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -102,7 +101,6 @@ jobs:
 
     - name: Display Crossbar.io version
       run: |
-        python -c "from twisted.conch.checkers import SSHPublicKeyDatabase"
         python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
         python -c "import crossbar; print(crossbar.__version__)"
 
@@ -119,7 +117,7 @@ jobs:
         ./test/test_cli.sh
 
   docs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
 
@@ -144,3 +142,56 @@ jobs:
 
     - name: Run Sphinx
       run: tox -c tox.ini -e sphinx
+
+  deploy:
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+
+    # https://github.blog/changelog/2020-12-15-github-actions-environments-environment-protection-rules-and-environment-secrets-beta/
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/environments
+    environment: deploy_aws
+
+    env:
+      AWS_DEFAULT_REGION:    ${{ secrets.AWS_DEFAULT_REGION }}
+      AWS_S3_BUCKET_NAME:    ${{ secrets.AWS_S3_BUCKET_NAME }}
+      AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      WAMP_PRIVATE_KEY:      ${{ secrets.WAMP_PRIVATE_KEY }}
+
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#adding-a-system-path
+    - name: Set environment
+      run: |
+        echo BUILD_DATE=`date -u +"%Y-%m-%d"` >> $GITHUB_ENV
+        echo CROSSBAR_VCS_REF=`git rev-parse --short ${GITHUB_SHA}` >> $GITHUB_ENV
+        echo CROSSBAR_BUILD_ID=$(date --utc +%Y%m%d)-$(git rev-parse --short ${GITHUB_SHA}) >> $GITHUB_ENV
+        echo CROSSBAR_VERSION=$(grep -E '^(__version__)' ./crossbar/_version.py | cut -d ' ' -f3 | sed -e 's|[u"'\'']||g') >> $GITHUB_ENV
+
+    # - name: Set environment - 2
+    #   run: |
+    #     echo CROSSBAR_VCS_REF=`git --git-dir="./.git" rev-list -n 1 v${CROSSBAR_VERSION} --abbrev-commit` >> $GITHUB_ENV
+
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install build-essential libssl-dev libffi-dev libunwind-dev \
+          libreadline-dev zlib1g-dev libbz2-dev libsqlite3-dev libncurses5-dev \
+          libsnappy-dev
+
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        architecture: 'x64'
+
+    - name: Install Python package dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Deploy (build, package and upload)
+      run: |
+        ./deploy.sh
