--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -8,6 +8,7 @@ constantly>=15.1.0
 cryptography>=2.6.1
 h2>=3.0,<4.0
 idna<2.6,>=2.5
+importlib-resources>=4.1.1
 incremental>=17.5.0
 jinja2>=2.10.1
 lmdb>=0.92
