--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,34 @@ jobs:
     - name: Run Coverage
       run: tox -c tox.ini -e coverage
 
-  test:
+  docs:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install libenchant-dev
+        sudo apt install libbz2-dev
+        sudo apt install libsnappy-dev
+        sudo apt install libunwind-dev
+
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        architecture: 'x64'
+
+    - name: Install Python package dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Run Sphinx
+      run: tox -c tox.ini -e sphinx
+
+  test-amd64:
     env:
       CB_FULLTESTS: 1
 
@@ -116,29 +143,57 @@ jobs:
       run: |
         ./test/test_cli.sh
 
-  docs:
-    runs-on: ubuntu-20.04
+  test-arm64:
+    env:
+      CB_FULLTESTS: 1
+
+    # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
+    # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
+    runs-on: [self-hosted, linux, ARM64]
+    strategy:
+      matrix:
+        # https://github.com/actions/setup-python#specifying-a-pypy-version
+        python-version: ['3.8', 'pypy-3.6']
+
+    # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
+    continue-on-error: false
+
     steps:
+    # Checkout sources
     - uses: actions/checkout@v2
 
-    - name: Install OS package dependencies
-      run: |
-        sudo apt update
-        sudo apt install libenchant-dev
-        sudo apt install libbz2-dev
-        sudo apt install libsnappy-dev
-        sudo apt install libunwind-dev
-
-    - name: Set up Python 3.x
+    # Use this Python
+    # https://github.com/actions/setup-python/blob/main/README.md
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-        architecture: 'x64'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install Python package dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
 
-    - name: Run Sphinx
-      run: tox -c tox.ini -e sphinx
+    - name: Install Crossbar.io package dependencies & Crossbar.io
+      run: |
+        pip install -r requirements-latest.txt
+        pip install .
+
+    - name: Display Crossbar.io version
+      run: |
+        python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
+        python -c "import crossbar; print(crossbar.__version__)"
+
+    - name: Run unit tests (Twisted Trial)
+      run: |
+        python -m twisted.trial crossbar
+
+    - name: Run integration tests (Autobahn|Python Client)
+      run: |
+        ./test/test_ab_examples.sh
+
+    - name: Run command line tests (Crossbar.io CLI)
+      run: |
+        ./test/test_cli.sh
+
