--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,7 +153,8 @@ jobs:
     strategy:
       matrix:
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.8', 'pypy-3.6']
+        # https://downloads.python.org/pypy/versions.json
+        python-version: ['3.9', ''pypy-3.7']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -165,10 +166,13 @@ jobs:
 
     # Use this Python
     # https://github.com/actions/setup-python/blob/main/README.md
+    # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
+    # https://github.com/actions/setup-python/issues/45
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: arm64
 
     - name: Install Python package dependencies
       run: |
