--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,34 @@ jobs:
     - name: Run Coverage
       run: tox -c tox.ini -e coverage
 
-  test:
+  docs:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install OS package dependencies
+      run: |
+        sudo apt update
+        sudo apt install libenchant-dev
+        sudo apt install libbz2-dev
+        sudo apt install libsnappy-dev
+        sudo apt install libunwind-dev
+
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+        architecture: 'x64'
+
+    - name: Install Python package dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Run Sphinx
+      run: tox -c tox.ini -e sphinx
+
+  test-amd64:
     env:
       CB_FULLTESTS: 1
 
@@ -116,82 +143,61 @@ jobs:
       run: |
         ./test/test_cli.sh
 
-  docs:
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Install OS package dependencies
-      run: |
-        sudo apt update
-        sudo apt install libenchant-dev
-        sudo apt install libbz2-dev
-        sudo apt install libsnappy-dev
-        sudo apt install libunwind-dev
-
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-        architecture: 'x64'
-
-    - name: Install Python package dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
-
-    - name: Run Sphinx
-      run: tox -c tox.ini -e sphinx
-
-  deploy:
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-
-    # https://github.blog/changelog/2020-12-15-github-actions-environments-environment-protection-rules-and-environment-secrets-beta/
-    # https://docs.github.com/en/free-pro-team@latest/actions/reference/environments
-    environment: deploy_aws
-
+  test-arm64:
     env:
-      AWS_DEFAULT_REGION:    ${{ secrets.AWS_DEFAULT_REGION }}
-      AWS_S3_BUCKET_NAME:    ${{ secrets.AWS_S3_BUCKET_NAME }}
-      AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      WAMP_PRIVATE_KEY:      ${{ secrets.WAMP_PRIVATE_KEY }}
+      CB_FULLTESTS: 1
 
-    runs-on: ubuntu-20.04
+    # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
+    # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
+    runs-on: [self-hosted, linux, ARM64]
+    strategy:
+      matrix:
+        # https://github.com/actions/setup-python#specifying-a-pypy-version
+        # https://downloads.python.org/pypy/versions.json
+        python-version: ['3.9', ''pypy-3.7']
+
+    # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
+    continue-on-error: false
+
     steps:
+    # Checkout sources
     - uses: actions/checkout@v2
 
-    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable
-    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#adding-a-system-path
-    - name: Set environment
-      run: |
-        echo BUILD_DATE=`date -u +"%Y-%m-%d"` >> $GITHUB_ENV
-        echo CROSSBAR_VCS_REF=`git rev-parse --short ${GITHUB_SHA}` >> $GITHUB_ENV
-        echo CROSSBAR_BUILD_ID=$(date --utc +%Y%m%d)-$(git rev-parse --short ${GITHUB_SHA}) >> $GITHUB_ENV
-        echo CROSSBAR_VERSION=$(grep -E '^(__version__)' ./crossbar/_version.py | cut -d ' ' -f3 | sed -e 's|[u"'\'']||g') >> $GITHUB_ENV
-
-    # - name: Set environment - 2
-    #   run: |
-    #     echo CROSSBAR_VCS_REF=`git --git-dir="./.git" rev-list -n 1 v${CROSSBAR_VERSION} --abbrev-commit` >> $GITHUB_ENV
-
-    - name: Install OS package dependencies
-      run: |
-        sudo apt update
-        sudo apt install build-essential libssl-dev libffi-dev libunwind-dev \
-          libreadline-dev zlib1g-dev libbz2-dev libsqlite3-dev libncurses5-dev \
-          libsnappy-dev
-
-    - name: Set up Python 3.x
+    # Use this Python
+    # https://github.com/actions/setup-python/blob/main/README.md
+    # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
+    # https://github.com/actions/setup-python/issues/45
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-        architecture: 'x64'
+        python-version: ${{ matrix.python-version }}
+        architecture: arm64
 
     - name: Install Python package dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
 
-    - name: Deploy (build, package and upload)
+    - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        ./deploy.sh
+        pip install -r requirements-latest.txt
+        pip install .
+
+    - name: Display Crossbar.io version
+      run: |
+        python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
+        python -c "import crossbar; print(crossbar.__version__)"
+
+    - name: Run unit tests (Twisted Trial)
+      run: |
+        python -m twisted.trial crossbar
+
+    - name: Run integration tests (Autobahn|Python Client)
+      run: |
+        ./test/test_ab_examples.sh
+
+    - name: Run command line tests (Crossbar.io CLI)
+      run: |
+        ./test/test_cli.sh
+
