--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -18,8 +18,9 @@ flatbuffers==1.12
 h2==3.2.0
 hpack==3.0.0
 hyperframe==5.2.0
-hyperlink==20.0.1
+hyperlink==21.0.0
 idna==2.5
+importlib-resources==4.1.1
 incremental==17.5.0
 Jinja2==2.11.2
 lmdb==1.0.0
@@ -27,7 +28,7 @@ MarkupSafe==1.1.1
 mistune==0.8.4
 msgpack==1.0.2
 netaddr==0.8.0
-numpy==1.19.4
+numpy==1.19.5
 passlib==1.7.4
 priority==1.3.0
 psutil==5.8.0
@@ -40,9 +41,9 @@ PyHamcrest==2.0.2
 PyNaCl==1.4.0
 pyOpenSSL==20.0.1
 PyQRCode==1.2.1
-python-snappy==0.5.4
+python-snappy==0.6.0
 PyTrie==0.4.0
-pytz==2020.4
+pytz==2020.5
 PyYAML==5.3.1
 requests==2.25.1
 sdnotify==0.3.2
