--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,13 +171,13 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        python -m ensurepip
+        python -m pip install -r requirements-dev.txt
 
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip install -r requirements-latest.txt
-        pip install .
+        python -m pip install -r requirements-latest.txt
+        python -m pip install .
 
     - name: Display Crossbar.io version
       run: |
