--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,12 +143,14 @@ jobs:
     # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
     # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
     runs-on: [self-hosted, linux, ARM64]
-    strategy:
-      matrix:
-        # https://github.com/actions/setup-python#specifying-a-pypy-version
-        # https://downloads.python.org/pypy/versions.json
-        # python-version: ['3.9', 'pypy-3.7']
-        python-version: ['pypy-3.7']
+
+    # strategy:
+    #   matrix:
+    #     # https://github.com/actions/setup-python#specifying-a-pypy-version
+    #     # https://downloads.python.org/pypy/versions.json
+    #     # python-version: ['3.9', 'pypy-3.7']
+    #     python-version: ['pypy-3.7']
+    #     pypy_version:	'nightly'
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -163,14 +165,16 @@ jobs:
     # https://github.com/actions/setup-python/blob/main/README.md
     # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
     # https://github.com/actions/setup-python/issues/45
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: pypy-3.7
+        pypy_version:	nightly
         architecture: aarch64
 
     - name: Install Python package dependencies
       run: |
+        python -V
         python -m ensurepip
         python -m pip install -r requirements-dev.txt
 
