--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,11 +143,12 @@ jobs:
     # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
     # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
     runs-on: [self-hosted, linux, ARM64]
+
     strategy:
       matrix:
         # https://github.com/actions/setup-python#specifying-a-pypy-version
         # https://downloads.python.org/pypy/versions.json
-        python-version: ['3.8', 'pypy-3.6']
+        python-version: ['3.x', 'pypy-3.7-nightly']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -162,6 +163,7 @@ jobs:
     # https://github.com/actions/setup-python/blob/main/README.md
     # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
     # https://github.com/actions/setup-python/issues/45
+    # https://github.com/sqlalchemy/sqlalchemy/blob/master/.github/workflows/create-wheels.yaml
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -170,13 +172,14 @@ jobs:
 
     - name: Install Python package dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        python -V
+        python -m ensurepip
+        python -m pip install -r requirements-dev.txt
 
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip install -r requirements-latest.txt
-        pip install .
+        python -m pip install -r requirements-latest.txt
+        python -m pip install .
 
     - name: Display Crossbar.io version
       run: |
