--- a/docker/Makefile
+++ b/docker/Makefile
@@ -60,14 +60,20 @@ publish:
 	curl -X POST https://hooks.microbadger.com/images/crossbario/crossbar-aarch64/ekMu3620yWLtfpxIqJQgPSmDNYE=
 
 
-#
+requirements:
+	sudo apt-get update
+	sudo apt-get install -y qemu qemu-kvm qemu-system qemu-system-x86 qemu-system-arm
+	sudo apt-get install -y --no-install-recommends qemu-user-static binfmt-support
+	sudo update-binfmts --enable qemu-arm
+	sudo update-binfmts --enable qemu-aarch64
+	sudo update-binfmts --display qemu-arm
+	sudo update-binfmts --display qemu-aarch64
+
 # Install Qemu (this is needed for cross-building armhf/aarch64 on amd64)
-#
 qemu_deps:
 	mkdir -p ./.qemu
-	cp /usr/bin/qemu-aarch64-static ./.qemu
-	cp /usr/bin/qemu-arm-static ./.qemu
-
+	cp /usr/bin/qemu-system-aarch64 ./.qemu
+	cp /usr/bin/qemu-system-arm ./.qemu
 
 #
 # Copy over current AutobahnJS into the default node directory
