--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,65 +137,66 @@ jobs:
       run: |
         ./test/test_cli.sh
 
-  test-arm64:
-    env:
-      CB_FULLTESTS: 1
+  # FIXME: https://github.com/crossbario/crossbar/issues/1842
+  #
+  # test-arm64:
+  #   env:
+  #     CB_FULLTESTS: 1
 
-    # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
-    # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
-    runs-on: [self-hosted, linux, ARM64]
+  #   # https://github.blog/changelog/2019-12-03-github-actions-self-hosted-runners-on-arm-architectures/
+  #   # https://medium.com/@nabil.servais/using-github-actions-to-test-your-go-code-on-arm64-ce581e646cb
+  #   runs-on: [self-hosted, linux, ARM64]
 
-    strategy:
-      matrix:
-        # https://github.com/actions/setup-python#specifying-a-pypy-version
-        # https://downloads.python.org/pypy/versions.json
-        python-version: ['3.x', 'pypy-3.7-nightly']
+  #   strategy:
+  #     matrix:
+  #       # https://github.com/actions/setup-python#specifying-a-pypy-version
+  #       # https://downloads.python.org/pypy/versions.json
+  #       python-version: ['3.x', 'pypy-3.7-nightly']
 
-    # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
-    # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
-    continue-on-error: false
+  #   # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+  #   # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
+  #   continue-on-error: false
 
-    steps:
-    # Checkout sources
-    - uses: actions/checkout@v2
+  #   steps:
+  #   # Checkout sources
+  #   - uses: actions/checkout@v2
 
-    # Use this Python
-    # https://github.com/marketplace/actions/setup-python
-    # https://github.com/actions/setup-python/blob/main/README.md
-    # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
-    # https://github.com/actions/setup-python/issues/45
-    # https://github.com/sqlalchemy/sqlalchemy/blob/master/.github/workflows/create-wheels.yaml
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: aarch64
+  #   # Use this Python
+  #   # https://github.com/marketplace/actions/setup-python
+  #   # https://github.com/actions/setup-python/blob/main/README.md
+  #   # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python#specifying-a-python-version
+  #   # https://github.com/actions/setup-python/issues/45
+  #   # https://github.com/sqlalchemy/sqlalchemy/blob/master/.github/workflows/create-wheels.yaml
+  #   - name: Set up Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #       architecture: aarch64
 
-    - name: Install Python package dependencies
-      run: |
-        python -V
-        python -m ensurepip
-        python -m pip install -r requirements-dev.txt
+  #   - name: Install Python package dependencies
+  #     run: |
+  #       python -V
+  #       python -m ensurepip
+  #       python -m pip install -r requirements-dev.txt
 
-    - name: Install Crossbar.io package dependencies & Crossbar.io
-      run: |
-        python -m pip install -r requirements-latest.txt
-        python -m pip install .
+  #   - name: Install Crossbar.io package dependencies & Crossbar.io
+  #     run: |
+  #       python -m pip install -r requirements-latest.txt
+  #       python -m pip install .
 
-    - name: Display Crossbar.io version
-      run: |
-        python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
-        python -c "import crossbar; print(crossbar.__version__)"
+  #   - name: Display Crossbar.io version
+  #     run: |
+  #       python -c "from autobahn import xbr; print(xbr.HAS_XBR)"
+  #       python -c "import crossbar; print(crossbar.__version__)"
 
-    - name: Run unit tests (Twisted Trial)
-      run: |
-        python -m twisted.trial crossbar
+  #   - name: Run unit tests (Twisted Trial)
+  #     run: |
+  #       python -m twisted.trial crossbar
 
-    - name: Run integration tests (Autobahn|Python Client)
-      run: |
-        ./test/test_ab_examples.sh
+  #   - name: Run integration tests (Autobahn|Python Client)
+  #     run: |
+  #       ./test/test_ab_examples.sh
 
-    - name: Run command line tests (Crossbar.io CLI)
-      run: |
-        ./test/test_cli.sh
-
+  #   - name: Run command line tests (Crossbar.io CLI)
+  #     run: |
+  #       ./test/test_cli.sh
