re-enable pypy aarch64 target

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -171,7 +171,15 @@ build_armhf_pypy3:
 	@echo "PyPy3 isn't available for armhf yet"
 
 build_aarch64_pypy3:
-	@echo "PyPy3 isn't available for aarch64 yet"
+	# enforce auto-generating a new key when using the images
+	rm -f node/.crossbar/key.*
+	docker build \
+		--build-arg BUILD_DATE=${BUILD_DATE} \
+		--build-arg CROSSBAR_VCS_REF=${CROSSBAR_VCS_REF} \
+		--build-arg CROSSBAR_VERSION=${CROSSBAR_VERSION} \
+		-t crossbario/crossbar:pypy3 \
+		-t crossbario/crossbar:pypy3-${CROSSBAR_VERSION} \
+		-f ./aarch64/Dockerfile.pypy3 .
 
 
 #
