--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,13 +42,21 @@ jobs:
         echo "  CROSSBAR_VERSION    = ${CROSSBAR_VERSION}"
         echo ""
 
+    # see:
+    #  - https://github.com/docker/login-action#docker-hub
+    #  - https://github.com/crossbario/crossbar/settings/secrets/actions
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
     - name: Build & publish Docker image for cpy-amd64
       run: |
         cd ./docker && \
         make download_wheels && \
         make build_amd64_cpy3 && \
         pwd && ls -la . && \
-        docker login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB_PASSWORD }} docker.io && \
         make publish_amd64_cpy3
 
     - name: Build & publish Docker image for pypy-amd64
@@ -57,5 +65,4 @@ jobs:
         make download_wheels && \
         make build_amd64_pypy3 && \
         pwd && ls -la . && \
-        docker login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB_PASSWORD }} docker.io && \
         make publish_amd64_pypy3
