--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,8 @@ jobs:
 
   image_amd64:
 
-    runs-on: ubuntu-20.04
+    #runs-on: ubuntu-20.04
+    runs-on: [self-hosted, linux, ARM64] # means matterhorn
 
     env:
       DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
