--- a/docker/Dockerfile.pypy-slim
+++ b/docker/Dockerfile.pypy-slim
@@ -1,7 +1,8 @@
 # this build argument must be defined _before_ FROM, so the value is available in FROM.
 # however, CROSSBAR_ARCH will _not_ be available further down the line because of this ordering!
 ARG CROSSBAR_ARCH
-FROM ${CROSSBAR_ARCH}/python:3.9-slim
+# PyPy only comes in 3.7 for now
+FROM ${CROSSBAR_ARCH}/pypy:3.7-slim
 
 MAINTAINER The Crossbar.io Project <support@crossbario.com>
 
@@ -58,10 +59,10 @@ RUN find /tmp
 RUN pip install --no-cache-dir \
         /tmp/txaio-latest-py2.py3-none-any.whl \
         /tmp/zlmdb-latest-py2.py3-none-any.whl \
-        /tmp/autobahn-latest-py2.py3-none-any.whl[accelerate,asyncio,twisted,encryption,compress,serialization,scram,xbr] \
+        /tmp/autobahn-latest-py2.py3-none-any.whl[asyncio,twisted,encryption,compress,serialization,scram,xbr] \
         /tmp/crossbar-latest-py2.py3-none-any.whl
 
-RUN pip install --no-cache-dir "wsaccel>=0.6.2" "vmprof>=0.4.12"
+RUN pip install --no-cache-dir "vmprof>=0.4.12"
 
 # test if everything installed properly
 RUN crossbar version
