--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,14 +73,14 @@ jobs:
     env:
       CB_FULLTESTS: 1
 
-    # Test on Ubuntu, MacOS, Windows using CPython 3.6-3.9, PyPy 3.6-3.7
+    # Test on Ubuntu, MacOS, Windows using CPython 3.7-3.9, PyPy 3.7+
     strategy:
       matrix:
         os: [ubuntu-20.04]
         # os: [ubuntu-20.04, macos-latest, windows-latest]
 
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+        python-version: ['3.7', '3.8', '3.9', 'pypy-3.7']
 
     runs-on: ${{ matrix.os }}
 
