--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ envlist =
     flake8
     bandit
     coverage
-    {py36,py37,py38,py39,pypy36,pypy37}-{pinned,unpinned,abtrunk}-trial
-    {py36,py37,py38,py39,pypy36,pypy37}-cli
-    {py36,py37,py38,py39,pypy36,pypy37}-examples
+    {py37,py38,py39,pypy37}-{pinned,unpinned,abtrunk}-trial
+    {py37,py38,py39,pypy37}-cli
+    {py37,py38,py39,pypy37}-examples
 
 
 # MAP: GitHub Actions Python Name => Tox Env Name (for Python)
@@ -19,11 +19,9 @@ envlist =
 #
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
-    pypy-3.6: pypy36
     pypy-3.7: pypy37
 
 
