--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -1,15 +1,16 @@
 attrs>=17.2.0
 git+https://github.com/crossbario/autobahn-python.git@master#egg=autobahn[asyncio,twisted,encryption,compress,serialization,scram]
 bitstring>=3.1.5
+bcrypt>=3.1.6
 cbor>=1.0.0
 click>=6.7
 constantly>=15.1.0
-cryptography>=1.9
-h2>=3.0,<4.0
+cryptography>=2.6.1
+h2>=3.2.0
 idna<2.6,>=2.5
 importlib-resources>=4.1.1
 incremental>=17.5.0
-jinja2>=2.9.6
+jinja2>=2.10.1
 lmdb>=0.92
 mistune>=0.7.4
 netaddr>=0.7.19
@@ -17,8 +18,8 @@ passlib>=1.7.1
 priority>=1.3.0
 psutil>=5.2.2
 py-ubjson>=0.9.0
-pyasn1-modules>=0.0.9
-pyasn1>=0.2.3
+pyasn1-modules>=0.2.4
+pyasn1>=0.4.5
 pygments>=2.2.0
 pynacl>=1.1.2
 pyopenssl>=17.1.0
@@ -33,12 +34,8 @@ treq>=20.4.1
 twisted[tls,conch,http2]>=20.3.0; sys_platform != 'darwin' and sys_platform != 'win32'
 twisted[tls,conch,http2,osx_platform]>=20.3.0; sys_platform == 'darwin'
 twisted[tls,conch,http2,windows_platform]>=20.3.0; sys_platform == 'win32'
-# twisted 20.3.0.dev0: treq fails with "from twisted.python.compat import _PY3, unicode"
-# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2]; sys_platform != 'darwin' and sys_platform != 'win32'
-# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,osx_platform]; sys_platform == 'darwin'
-# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,windows_platform]; sys_platform == 'win32'
 git+https://github.com/crossbario/txaio.git@master#egg=txaio
-txtorcon>=0.19.3
+txtorcon>=20.0.0
 u-msgpack-python>=2.4.1
 # urllib3 is an indirect dependency, but we force a recent version because of https://nvd.nist.gov/vuln/detail/CVE-2019-11324
 # workaround for version conflict in requests vs sth else:
